Update build instructions and features list

--- a/X11/index.html
+++ b/X11/index.html
@@ -62,20 +62,22 @@
 				
 				<h3 class="header" id="features"> Current Features </h3>
 				<ul>
-					<li> X11 on iOS via Xvnc </li>
-					<li> Working window managers (jwm / twm / fluxbox) </li>
-					<li> <a href="https://github.com/MaxLeiter/cydia/tree/master/debs">Loads</a> of other packaged libraries, tools, and applications, including meson/ninja and ocaml. </li>
+					<li>X11 on iOS via Xvnc </li>
+					<li>Working window managers (<a href="https://joewing.net/projects/jwm/">jwm</a> / <a href="https://github.com/freedesktop/twm">twm</a> / <a href="http://fluxbox.org/">fluxbox</a>) </li>	
+					<li>Text editor (<a href="http://www.fox-toolkit.org/adie.html">adie</a>)</li>
+					<li>Image editor (<a href="https://github.com/Symbian9/azpainter">azpainter</a>)</li>
+					<li>OpenGL (via Mesa)</li>
+					<li> <a href="https://github.com/MaxLeiter/cydia/tree/master/debs">Loads</a> of other libraries, tools, and applications. </li>
 					<li> All available in a <a href="https://maxleiter.com/cydia">Cydia repo</a></li>
 				</ul>
 				<h3 class="header" id="roadmap"> What's next? </h3>
 				<ul>
 					<li> <strike>Fix modern versions of fontconfig (> 2.8.0)</strike> &mdash; <i>this has been addressed.</i></li>
-					<li> Proper desktop enviroments like XFCE and GNOME</li>
+					<li> Desktop enviroments like XFCE, GNOME, and KDE</li>
 					<ul>
-						<li> requires GTK </li>
+						<li> requires GTK or QT </li>
 					</ul>
-					<li> Qt support </li>
-					<li> Experiment with Wayland via wayvnc</li>
+					<li><strike>Experiment with Wayland via wayvnc</strike> &mdash; <i> not feasible on iOS</i></li>
 				</ul>
 				<h3 class="header" id="contribute"> Want to contribute? </h3>
 				If you're interested in using X11 now, or helping make it available sooner, feel free to <a href="mailto:maxwell.leiter@gmail.com">email me</a> or find me on IRC as MaxLeiter in #X11iOS on Freenode. More information on contributing is in the works. 
