--- a/X11/instructions.html
+++ b/X11/instructions.html
@@ -115,8 +115,8 @@
 								</tr>
 								<tr>
 									<td>Fontconfig</td>
-									<td>2.8.0 ⚠️</td>
-									<td>Requires modifying <code><abbr title="For me, /usr/share/SDKs/iPhoneOS.sdk/usr/include/stdlib.h:195:6">stdlib.h</abbr></code> in SDK to allow <code>system</code> calls. 2.8.0 is an <b>ancient</b> version but I've been unable to fix newer ones.</td>
+									<td>2.13.1 ⚠️</td>
+									<td>Requires modifying <code><abbr title="For me, /usr/share/SDKs/iPhoneOS.sdk/usr/include/stdlib.h:195:6">stdlib.h</abbr></code> in SDK to allow <code>system</code> calls. Bug with patch available <a href="https://gitlab.freedesktop.org/fontconfig/fontconfig/issues/210">here</a>.</td>
 								</tr>
 								<tr>
 									<td>xtrans</td>
@@ -130,7 +130,7 @@
 								</tr>
 								<tr>
 									<td>libFS</td>
-									<td>1.0.8</td>
+									<td>1.0.8 ⚠️</td>
 									<td>Need to remove some code from the <code>libtool</code> file. The enviroment variables aren't populated on iOS so a generated bash command is wrong. Check the output of <code>./configure</code> to pinpoint the line number.</td>
 								</tr>
 								<tr>
@@ -310,7 +310,7 @@
 								</tr>
 								<tr>
 									<td>Mesa</td>
-									<td>0.52.1</td>
+									<td>0.52.1 ⚠️</td>
 									<td>Set DRI drivers to swrast and set gallium drivers to empty. I manually modifed meson_options.txt. Also symlink m4 to <code>/opt/local/bin/gm4</code>. I had to remove an __APPLE__ check in <code>/src/mesa/main/texcompress_s3tc_tmp.h</code> so it used the <code>GL</code> library instead of the macOS <code>OpenGL</code> one. Also, be sure to specify a minimum iOS version so thread-local support works with something like <code>-miphoneos-version-min=11.2</code>.</td>
 								</tr>
 								<tr>
@@ -490,8 +490,8 @@
 								</tr>
 								<tr>
 									<td>FLTK</td>
-									<td>1.3.5 ❗</td>
-									<td>Couldn't get to build. Probably doable but not necessary for Xvnc.</td>
+									<td>1.3.5 ⚠️</td>
+									<td>Need to remove some <code>-U__APPLE__</code> calls. Disable tests in Makefile.</td>
 								</tr>
 								<tr>
 									<td>tigervnc</td>
@@ -505,8 +505,8 @@
 								</tr>
 								<tr>
 									<td>Glib</td>
-									<td>2.62.4 ❗</td>
-									<td>Disable cocoa and carbon support in build.meson. Had to fake <a href="https://opensource.apple.com/source/Libc/Libc-320/include/crt_externs.h.auto.html"><code>crt_externs.h</code></a>. Remove the <code>if host_system == 'darwin'</code> check in <code>glib/meson.build</code>. Not working yet.</td>
+									<td>2.62.4 ⚠️</td>
+									<td>Disable cocoa and carbon support in build.meson. Had to fake <a href="https://opensource.apple.com/source/Libc/Libc-320/include/crt_externs.h.auto.html"><code>crt_externs.h</code></a>. Remove the <code>if host_system == 'darwin'</code> check in <code>glib/meson.build</code>.</td>
 								</tr>
 								<tr>
 									<td>LuaJIT</td>
@@ -537,6 +537,21 @@
 									<td>EFL</td>
 									<td>1.23.3</td>
 									<td>working on it</td>
+								</tr>
+								<tr>
+									<td>compton</td>
+									<td>git v0.1 beta g316eac0</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>FOX toolkit</td>
+									<td>1.7.67</td>
+									<td>Contains Adie (text editor), a calculator, and Shutterbug (screenshots)</td>
+								</tr>
+								<tr>
+									<td>azpainter</td>
+									<td>4bf18c8</td>
+									<td></td>
 								</tr>
 							</tbody>
 						</table>
