Simplify main site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Max Leiter</title>
-	<meta name="description" content="Max Leiter - personal website detailing projects and work.">
+	<meta name="description" content="Max Leiter - projects and work">
 	<meta name="keywords" content="Max,Leiter,Max Leiter,projects,resume">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,74 +21,21 @@
 	<body>
 		<div class="main-container">
 			<div class="main wrapper clearfix">
-				<aside>
-					<div class="profile">
-						<h1 class="header">Max Leiter</h1>
-						<p class="subtitle">
-							<b> University of Southern California, Graduating 2022</b><br>
-							<span class="small">Computer Science &amp; Business Administration</span>
-						</p>
-						<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
-						<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
-						<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
-						<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
-						<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
-					</div>
-				</aside>
-				<aside class="work">
-					<h2 class="header">Work Experience</h2>
-					<p>
-						<p>
-							<strong>School year 2019</strong> | Software Developer <br> <i>USC Annenberg Media, Los Angeles, CA</i> <br>
-							Currently handling all development related to the official Annenberg Media app, Annie. 
-						</p>
+				<div class="profile">
+					<h1 class="header">Max Leiter</h1>
+					<p class="subtitle">
+						Full-stack developer, hacker, student, and open-source enthusiast.
 					</p>
-					<hr />
-					<p>
-						<p>
-							<strong>Summer 2019</strong> | Software Developer <br> <i>BlitzIQ, San Francisco, CA</i> <br>
-							Full-stack (largely JavaScript) development with a focus on the front-end. Technologies consisted of React, Redux, MongoDB, material-ui, CircleCI, AWS, and nginx.
-						</p>
+					<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
+					<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
+					<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
+					<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
+					<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
+					<a href="https://linkedin.com/in/MaxLeiter"><i class="ionicons ion-social-linkedin" title="LinkedIn"></i></a>
 
-					</p>
-					<hr />
-					<p>
-						<p>
-							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
-							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma. <i><a class="paper-link" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0220362#sec013">Paper available here</a></i>
-						</p>
-					</p>
-					<hr />
-					<p>
-						<p>
-							<strong>Summer 2016</strong> | Technical Intern <br> <i>Five9 Network Systems, Rochester, NY</i><br>
-							Assisted in developing an in-house database for managing and cataloging parts and modified a Linux distribution for internal use that handles maintaining the system.
-						</p>
-					</p>
-				</aside>
-				<aside class="skills">
-					<h2 class="header">Skills</h2>
-					<div class="skills-grid-container">
-						<span>
-							<p>
-								<strong>Programming</strong> <br>
-								Java, JavaScript, C++
-							</p>
-						</span>
-						<span>
-							<p>
-								<strong>Frameworks & Libraries</strong> <br>
-								Node.js, React, Socket.io, Angular, Vue.js, Bootstrap, jQuery
-							</p>
-						</span>
-						<span>
-							<p>
-								<strong>Software</strong> <br>
-								Blender, SolidWorks, Excel/Office, Git, Docker, AWS, CircleCI
-							</p>
-						</span>
-					</div>
-				</aside>
+				</div>
+				<hr>
+				<br>
      <!-- 
     		<aside class="extracurricular">
 					<h2>Extracurriculars</h2>
@@ -99,48 +46,35 @@
 				</aside> 
 			-->
 			<article class="projects">
-				<header>
-					<h2 class="header">My Projects</h2>
-				</header>
+				<h1> Projects I started </h1>
 				<section>
-					<h3>X11 on iOS</h3> <span class="after"><a href="https://maxleiter.com/X11">website</a><span class="slash">/</span> <a href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a href="https://maxleiter.com/X11/pic.jpeg">screenshot</a><span class="after"><a class="box" href="https://maxleiter.com/X11">creator</a></span>
-					<p>Patched, compiled, and packaged X11 (<a href="https://en.wikipedia.org/wiki/X_Window_System">the X Window System</a>) for jailbroken iOS devices. </p>
+					<h3>X11 on iOS</h3> <span class="after"><a href="https://maxleiter.com/X11">website</a> <span class="slash">/</span> <a href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a href="https://maxleiter.com/X11/onipad.jpg">screenshot</a><span class="after"></span></span>
+					<p>Patched, compiled, and packaged <a href="https://en.wikipedia.org/wiki/X_Window_System">X11</a> (plus a distribution's worth of other packages) for jailbroken iOS devices. </p>
 				</section>
 				<section>
-					<h3>Annie</h3> <span class="after"><a href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"><a class="box" href="https://github.com/MaxLeiter/jsonTree">developer</a></span>
-					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
-				</section>
-				<section>
-					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
+					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a></span>
 					<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 				</section>
 				<section>
-					<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Aknightos+author%3AMaxLeiter&type=">contributor</a></span>
-					<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote C bindings for the both <a href="https://github.com/knightos/libc">the kernel</a> and <a href="https://github.com/KnightOS/corelib/blob/master/bindings.c">the userspace</a>. Additionally contributed to <a href="https://github.com/KnightOS/z80e">z80e</a>, the emulator, and wrote the <a href="http://www.knightos.org/documentation/tutorials/getting-started-c/">C tutorials.</a> </p>
+					<h3>Annie</h3> <span class="after"><a href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"></span></span>
+					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
+				</section>
+				<br>
+				<h1 class="wontAnimate"> Projects I work on </h1>
+				<section>
+					<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a></span>
+					<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote and currently maintain the C libraries. </p>
 				</section>
 				<section>
-					<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a><a class="box" href="https://github.com/search?utf8=%E2%9C%93&q=org%3Athelounge+author%3AMaxLeiter">contributor</a></span>
-					<p>A self-hosted, always-on IRC client built with Node and other web technologies. Contributions include maintaining the demo, <a href="https://github.com/thelounge/lounge/pull/2552">file uploading</a>, <a href="https://github.com/thelounge/lounge/pull/674">overriding default values based on URL queries</a>, <a href="https://github.com/thelounge/thelounge/pull/1709">linking mentioned names in messages</a>, and <a href="https://github.com/thelounge/lounge/pull/1806">audio</a>/<a href="https://github.com/thelounge/lounge/pull/1817">video</a> embed support. </p>
+					<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a></span>
+					<p>A self-hosted, always-on IRC client built with Node.js, Vue, and other web technologies. Contributions include maintaining the demo, rich media embeds, <a href="https://github.com/thelounge/thelounge-bot">the IRC bot</a>, and more. </p>
 				</section>
-				<section>
-					<h3>3D Tic Tac Toe AI</h3> <span class="after"><a href="https://github.com/MaxLeiter/3DTicTacToe">GitHub</a><a class="box" href="https://github.com/MaxLeiter/3DTicTacToe">creator</a></span>
-					<p>An Artificial Intelligence project for exploring adversarial search. Plays 4x4x4 Tic Tac Toe. Uses minimax with alpha-beta pruning to play.</p>
-				</section>
-			</section>
-			<section>
-				<h3>thelounge-bot</h3> <span class="after"><a href="https://github.com/thelounge/lounge-bot">GitHub</a><a class="box" href="https://github.com/thelounge/lounge-bot">creator</a></span>
-				<p>A modular JavaScript IRC bot for <code>#thelounge</code> on Freenode. Its primary use is fetching  requested issue and pull request information.</p>
 			</section>
 		</article>
-
+		<footer>
+			<i class="footer">And many more on <a href="https://github.com/MaxLeiter">my GitHub</a></i>
+		</footer>
 	</div>
-</div>
-
-<div class="footer-container">
-	<footer class="wrapper">
-		<h3>Max Leiter</h3>
-		<a href="https://github.com/MaxLeiter/maxleiter.github.io" id="source">Source on GitHub</a>
-	</footer>
 </div>
 
 </body>
