Some more cleanup following refactor

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</aside> 
 			-->
 			<article class="projects">
-				<h1> Projects I started </h1>
+				<h1> <i>Projects I started </i></h1>
 				<section>
 					<h3>X11 on iOS</h3> <span class="after"><a href="https://maxleiter.com/X11">website</a> <span class="slash">/</span> <a href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a href="https://maxleiter.com/X11/onipad.jpg">screenshot</a><span class="after"></span></span>
 					<p>Patched, compiled, and packaged <a href="https://en.wikipedia.org/wiki/X_Window_System">X11</a> (plus a distribution's worth of other packages) for jailbroken iOS devices. </p>
@@ -60,7 +60,7 @@
 					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
 				</section>
 				<br>
-				<h1 class="wontAnimate"> Projects I work on </h1>
+				<h1 class="wontAnimate"> <i>Projects I work on</i> </h1>
 				<section>
 					<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a></span>
 					<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote and currently maintain the C libraries. </p>
