add hacksc, fix <a> tags to target _blank

--- a/index.html
+++ b/index.html
@@ -26,53 +26,46 @@
 					<p class="subtitle">
 						Full-stack developer, hacker, student, and open-source enthusiast.
 					</p>
-					<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
-					<a href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
-					<a href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
-					<a href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
-					<a href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
-					<a href="https://linkedin.com/in/MaxLeiter"><i class="ionicons ion-social-linkedin" title="LinkedIn"></i></a>
+					<a target="_blank" href=""><i class="site" data-link="https://maxleiter.com"></i></a>
+					<a target="_blank" href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
+					<a target="_blank" href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
+					<a target="_blank" href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
+					<a target="_blank" href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
+					<a target="_blank" href="https://linkedin.com/in/MaxLeiter"><i class="ionicons ion-social-linkedin" title="LinkedIn"></i></a>
 
 				</div>
 				<hr>
-				<br>
-     <!-- 
-    		<aside class="extracurricular">
-					<h2>Extracurriculars</h2>
-					<p>
-						Member of Theta Tau, USC's Professional Engineering Fraternity.
-						Also, an avid snowboarder, longboarder, and baseball catcher.
-					</p>
-				</aside> 
-			-->
 			<article class="projects">
-				<h1> <i>Projects I started </i></h1>
+				<h1> <i>Projects I started... </i></h1>
 				<section>
-					<h3>X11 on iOS</h3> <span class="after"><a href="https://maxleiter.com/X11">website</a> <span class="slash">/</span> <a href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a href="https://maxleiter.com/X11/onipad.jpg">screenshot</a><span class="after"></span></span>
-					<p>Patched, compiled, and packaged <a href="https://en.wikipedia.org/wiki/X_Window_System">X11</a> (plus a distribution's worth of other packages) for jailbroken iOS devices. </p>
+					<h3>X11 on iOS</h3> <span class="after"><a target="_blank" href="https://maxleiter.com/X11">website</a> <span class="slash">/</span> <a target="_blank" href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a target="_blank" href="https://maxleiter.com/X11/onipad.jpg">screenshot</a><span class="after"></span></span>
+					<p>Patched, compiled, and packaged <a target="_blank" href="https://en.wikipedia.org/wiki/X_Window_System">X11</a> (plus a distribution's worth of other packages) for jailbroken iOS devices. </p>
 				</section>
 				<section>
-					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a></span>
+					<h3>jsonTree</h3> <span class="after"><a target="_blank" href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a target="_blank" href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a target="_blank" href="https://maxleiter.github.io/jsonTree/example/">demo</a></span>
 					<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 				</section>
 				<section>
-					<h3>Annie</h3> <span class="after"><a href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"></span></span>
-					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
+					<h3>Annie</h3> <span class="after"><a target="_blank" href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a target="_blank" href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"></span></span>
+					<p>Annie is the official app for the University of Southern California's <a target="_blank" href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
 				</section>
-				<br>
 				<h1 class="wontAnimate"> <i>Projects I work on</i> </h1>
 				<section>
-					<h3>KnightOS</h3> <span class="after"><a href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a href="http://knightos.org">website</a></span>
+					<h3>HackSC</h3> <a target="_blank" href="http://hacksc.com">website</a></span>
+					<p>HackSC is Southern California's largest hackathon with over 800+ attendees.</p>
+				</section>
+				<section>
+					<h3>KnightOS</h3> <span class="after"><a target="_blank" href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a target="_blank" href="http://knightos.org">website</a></span>
 					<p>An open-source unix-like operating system for z80-based calculators written entirely in z80 asm. I wrote and currently maintain the C libraries. </p>
 				</section>
 				<section>
-					<h3>The Lounge</h3> <span class="after"><a href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a href="https://demo.thelounge.chat">demo</a></span>
-					<p>A self-hosted, always-on IRC client built with Node.js, Vue, and other web technologies. Contributions include maintaining the demo, rich media embeds, <a href="https://github.com/thelounge/thelounge-bot">the IRC bot</a>, and more. </p>
+					<h3>The Lounge</h3> <span class="after"><a target="_blank" href="https://github.com/thelounge/lounge">GitHub</a> <span class="slash">/</span> <a target="_blank" href="https://thelounge.github.io">website</a> <span class="slash">/</span> <a target="_blank" href="https://demo.thelounge.chat">demo</a></span>
+					<p>A self-hosted, always-on IRC client built with Node.js, Vue, and other web technologies. Contributions include maintaining the demo, rich media embeds, <a target="_blank" href="https://github.com/thelounge/thelounge-bot">the IRC bot</a>, and more. </p>
 				</section>
 			</section>
 		</article>
 		<footer>
-			<i class="footer">And many more on <a href="https://github.com/MaxLeiter">my GitHub</a></i>
+			<i class="footer">And many more on <a target="_blank" href="https://github.com/MaxLeiter">my GitHub</a></i>
 		</footer>
 	</div>
 </div>
