--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 				<hr>
 			<article class="projects">
-				<h1> <i>Projects I started... </i></h1>
+				<h1> <i>Projects I started </i></h1>
 				<section>
 					<h3>X11 on iOS</h3> <span class="after"><a target="_blank" href="https://maxleiter.com/X11">website</a> <span class="slash">/</span> <a target="_blank" href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a target="_blank" href="https://maxleiter.com/X11/onipad.jpg">screenshot</a><span class="after"></span></span>
 					<p>Patched, compiled, and packaged <a target="_blank" href="https://en.wikipedia.org/wiki/X_Window_System">X11</a> (plus a distribution's worth of other packages) for jailbroken iOS devices. </p>
