Fix email link and CSS cleanup

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					</p>
 					<a target="_blank" href=""><i class="site" data-link="https://maxleiter.com"></i></a>
 					<a target="_blank" href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
-					<a target="_blank" href="mailto:hello@maxleiter.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
+					<a target="_blank" href="mailto:maxwell.leiter@gmail.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
 					<a target="_blank" href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
 					<a target="_blank" href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
 					<a target="_blank" href="https://linkedin.com/in/MaxLeiter"><i class="ionicons ion-social-linkedin" title="LinkedIn"></i></a>
