--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 					<p class="subtitle">
 						Full-stack developer, hacker, student, and open-source enthusiast.
 					</p>
-					<a target="_blank" href=""><i class="site" data-link="https://maxleiter.com"></i></a>
-					<a target="_blank" href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
-					<a target="_blank" href="mailto:maxwell.leiter@gmail.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
-					<a target="_blank" href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
-					<a target="_blank" href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
-					<a target="_blank" href="https://linkedin.com/in/MaxLeiter"><i class="ionicons ion-social-linkedin" title="LinkedIn"></i></a>
+					<p class="small">
+						Currently hacking at <a target="_blank" href="https://zeit.co">ZEIT</a> and <a target="_blank" href="https://www.uscannenbergmedia.com/">Annenberg Media</a>. Previously at BlitzIQ.
+					</p>
+					<a target="_blank" class="icon" href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
+					<a target="_blank" class="icon" href="mailto:maxwell.leiter@gmail.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
+					<a target="_blank" class="icon" href="https://demo.thelounge.chat/?nick=Hello_Max&join=maxleiter"><i class="ionicons ion-pound" title="IRC"></i></a>
+					<a target="_blank" class="icon" href="https://news.ycombinator.com/user?id=MaxLeiter"><i class="ionicons ion-social-hackernews" title="HackerNews"></i></a>
+					<a target="_blank" class="icon" href="https://linkedin.com/in/MaxLeiter"><i class="ionicons ion-social-linkedin" title="LinkedIn"></i></a>
 
 				</div>
 				<hr>
@@ -45,14 +47,14 @@
 					<h3>jsonTree</h3> <span class="after"><a target="_blank" href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a target="_blank" href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a target="_blank" href="https://maxleiter.github.io/jsonTree/example/">demo</a></span>
 					<p>A lightweight and vanilla JavaScript micro-library for generating collapsible HTML trees from JSON data. </p>
 				</section>
-				<section>
-					<h3>Annie</h3> <span class="after"><a target="_blank" href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a target="_blank" href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"></span></span>
-					<p>Annie is the official app for the University of Southern California's <a target="_blank" href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
-				</section>
-				<h1 class="wontAnimate"> <i>Projects I work on</i> </h1>
+				<h1> <i>Projects I work on</i> </h1>
 				<section>
 					<h3>HackSC</h3> <a target="_blank" href="http://hacksc.com">website</a></span>
 					<p>HackSC is Southern California's largest hackathon with over 800+ attendees.</p>
+				</section>
+				<section>
+					<h3>Annie</h3> <span class="after"><a target="_blank" href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a target="_blank" href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"></span></span>
+					<p>Annie is the official app for the University of Southern California's <a target="_blank" href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
 				</section>
 				<section>
 					<h3>KnightOS</h3> <span class="after"><a target="_blank" href="https://github.com/knightos/knightos">GitHub</a> <span class="slash">/</span> <a target="_blank" href="http://knightos.org">website</a></span>
