previously at no more

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						Full-stack developer, hacker, student, and open-source enthusiast.
 					</p>
 					<p class="small">
-						Currently building at <a target="_blank" href="https://zeit.co">ZEIT</a> and <a target="_blank" href="https://www.uscannenbergmedia.com/">Annenberg Media</a>. Previously at BlitzIQ.
+						Currently building at <a target="_blank" href="https://zeit.co">ZEIT</a> and <a target="_blank" href="https://www.uscannenbergmedia.com/">Annenberg Media</a>.
 					</p>
 					<a target="_blank" class="icon" href="https://github.com/MaxLeiter"><i class="ionicons ion-social-github" data-link="https://github.com/MaxLeiter" title="GitHub"></i></a>
 					<a target="_blank" class="icon" href="mailto:maxwell.leiter@gmail.com"><i class="ionicons ion-edit" title="Email" data-link="maxwell.leiter@gmail.com"></i></a>
